--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 <input type="file" accept="images/*" hidden></button>
 <button id="submit"><img src="submit.svg" alt=""></button>
     </div>
+    <footer >
+      <div class="text">
+        <span>Created By <a href="https://tamxbb00.github.io/sucess/#">Tamxwize</a> | &#169; 2025 All Rights Reserved</span>
+      </div>
+    </footer>
   <script src="script.js"></script>  
 </body>
 </html>
