change aos delay

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TamXpert Ai </title>
     <link rel="stylesheet" href="style.css">
+    <!-- AOS CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css">
     <link rel="icon" type="image/png" href="logo4.png">
 </head>
 <body>
@@ -14,6 +16,14 @@
     <div class="ai-chat-area">
         Hey there! 🌟 What can I assist you with today?
     </div>
+    <div class="user-chat-area" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
+    <!-- Content goes here -->
+</div>
+
+<div class="ai-chat-area" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1200">
+    <!-- Content goes here -->
+</div>
+
    
 </div>
     </div>
@@ -29,5 +39,9 @@
       </div>
     </footer>
   <script src="script.js"></script>  
+    <script>
+    AOS.init(); // Initializes AOS library
+</script>
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
 </body>
 </html>
