--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <footer >
       <div class="text">
-        <span>Created By <a href="https://tamxbb00.github.io/sucess/#">Tamxwize</a> | &#169; 2025 All Rights Reserved</span>
+        <span>Created By <a href="https://tamxbb00.github.io/tamxwize/">Tamxwize</a> | &#169; 2025 All Rights Reserved</span>
       </div>
     </footer>
   <script src="script.js"></script>  
